[gd_scene load_steps=39 format=3 uid="uid://b72cmuhsp6dty"]

[ext_resource type="Script" uid="uid://cbusgpsbm2fr1" path="res://scripts/entities/player.gd" id="1_l2mvf"]
[ext_resource type="Texture2D" uid="uid://cnoa4wpcsl3u2" path="res://assets/sprites/player1.png" id="2_v7i6e"]
[ext_resource type="AudioStream" uid="uid://bue6cgvu2wq0d" path="res://assets/sounds/sfx/flapsound.wav" id="3_mrloc"]
[ext_resource type="AudioStream" uid="uid://ctmd2on11oc70" path="res://assets/sounds/sfx/collision_sound.wav" id="4_6ehfl"]
[ext_resource type="AudioStream" uid="uid://bfqp85rr2ou5m" path="res://assets/sounds/sfx/death_sound.wav" id="5_7i1m0"]
[ext_resource type="Texture2D" uid="uid://cumyli7p4uvmu" path="res://assets/sprites/player1_brake_final.png" id="6_6g6kg"]
[ext_resource type="Texture2D" uid="uid://bfg6gcxiol0pd" path="res://assets/sprites/flap2.png" id="7_r7njt"]
[ext_resource type="Texture2D" uid="uid://c4o2uo8mdy5fb" path="res://assets/sprites/P1_walking-Sheet.png" id="8_10sow"]
[ext_resource type="Texture2D" uid="uid://buvq3srq1veme" path="res://assets/sprites/P1_naked_fly.png" id="9_66xqu"]
[ext_resource type="Texture2D" uid="uid://chgti3j2abeet" path="res://assets/sprites/P1_spawn.png" id="10_bnlhq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08t41"]
radius = 21.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5u6hq"]
size = Vector2(45.5, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_5u6hq"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4qa6"]
size = Vector2(32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6tgf"]
atlas = ExtResource("6_6g6kg")
region = Rect2(0, 0, 55, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_73kkf"]
atlas = ExtResource("7_r7njt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5sgd"]
atlas = ExtResource("7_r7njt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ki56"]
atlas = ExtResource("8_10sow")
region = Rect2(90, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogpgs"]
atlas = ExtResource("8_10sow")
region = Rect2(45, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_saib0"]
atlas = ExtResource("8_10sow")
region = Rect2(0, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv5ih"]
atlas = ExtResource("9_66xqu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n36er"]
atlas = ExtResource("9_66xqu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d745t"]
atlas = ExtResource("10_bnlhq")
region = Rect2(0, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc1tv"]
atlas = ExtResource("10_bnlhq")
region = Rect2(45, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe83n"]
atlas = ExtResource("10_bnlhq")
region = Rect2(90, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwche"]
atlas = ExtResource("10_bnlhq")
region = Rect2(135, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv3je"]
atlas = ExtResource("10_bnlhq")
region = Rect2(180, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hm5d"]
atlas = ExtResource("10_bnlhq")
region = Rect2(225, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw3xw"]
atlas = ExtResource("10_bnlhq")
region = Rect2(270, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gvyl"]
atlas = ExtResource("10_bnlhq")
region = Rect2(315, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2s01"]
atlas = ExtResource("10_bnlhq")
region = Rect2(360, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb0mf"]
atlas = ExtResource("10_bnlhq")
region = Rect2(405, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2dek"]
atlas = ExtResource("10_bnlhq")
region = Rect2(450, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sokb"]
atlas = ExtResource("10_bnlhq")
region = Rect2(495, 0, 45, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_txtga"]
atlas = ExtResource("10_bnlhq")
region = Rect2(540, 0, 45, 59)

[sub_resource type="SpriteFrames" id="SpriteFrames_ss7kx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6tgf")
}],
"loop": true,
"name": &"P1_Brake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73kkf")
}],
"loop": true,
"name": &"P1_Flap2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5sgd")
}],
"loop": true,
"name": &"P1_Fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ki56")
}],
"loop": true,
"name": &"P1_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ki56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogpgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saib0")
}],
"loop": true,
"name": &"P1_Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv5ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n36er")
}],
"loop": true,
"name": &"P1_defeated",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d745t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc1tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe83n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwche")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hm5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw3xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gvyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2s01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb0mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2dek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sokb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txtga")
}],
"loop": false,
"name": &"P1_spawn",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73kkf"]
size = Vector2(21, 17.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2mvf"]
size = Vector2(21, 22)

[node name="PlayerBody" type="CharacterBody2D"]
collision_mask = 135
script = ExtResource("1_l2mvf")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("2_v7i6e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 9)
shape = SubResource("CapsuleShape2D_08t41")

[node name="CombatArea" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatArea"]
position = Vector2(3.25, 5)
shape = SubResource("RectangleShape2D_5u6hq")
debug_color = Color(0.70389, 0.380383, 0.792011, 0.42)

[node name="FlapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mrloc")

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6ehfl")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7i1m0")

[node name="CollectionArea" type="Area2D" parent="." groups=["player_collectors"]]
collision_layer = 17
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_5u6hq")
debug_color = Color(0.587041, 0.54364, 0.220657, 0.42)

[node name="StompArea" type="Area2D" parent="." groups=["player_stomp_areas"]]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(-4, 15)
shape = SubResource("RectangleShape2D_d4qa6")
debug_color = Color(0, 0.539836, 0.959078, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ss7kx")
animation = &"P1_Flap2"
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": false,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "res://assets/sprites/P2_walking-Sheet.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "6adb3330404255455b36a0eaec764fa0"

[node name="VulnerableArea" type="Area2D" parent="." groups=["player_vulnerable_areas"]]
collision_layer = 64
collision_mask = 32

[node name="FlyingCollisionShape2D" type="CollisionShape2D" parent="VulnerableArea"]
light_mask = 64
visibility_layer = 32
position = Vector2(0.5, -14.25)
shape = SubResource("RectangleShape2D_73kkf")

[node name="WalkingCollisionShape2D" type="CollisionShape2D" parent="VulnerableArea"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_l2mvf")

[connection signal="area_entered" from="CombatArea" to="." method="_on_combat_area_area_entered"]
[connection signal="area_entered" from="CollectionArea" to="." method="_on_collection_area_area_entered"]
[connection signal="area_entered" from="StompArea" to="." method="_on_stomp_area_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_respawn_animation_finished"]
